# SLURM-PyTorch-DDP-Launcher

./: Dockerfile  Makefile  README.md  pyproject.toml
configs/: example.yaml
src/slurm_ddp/: __init__.py  cli.py  launcher.py
tests/: test_launcher.py
