[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-ddp"
version = "0.3.0"
description = "Generate SLURM sbatch scripts that launch torchrun for multi-node DDP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Arash Mozhdehi" }]
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.5"]

[project.scripts]
slurm-ddp = "slurm_ddp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
